--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   carousel_slider: ^4.2.0
+  line_awesome_flutter: any
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -62,10 +64,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/logo.png
-    - images/bg1.png
+    - images/
     - images/data/
-
+    - images/list-data/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
